# weather-cmd

./: .gitignore  CLAUDE.md  CODE-ANALYSIS-GEM.md  README.md  TASKLIST.md  pyproject.toml  weather-cmd
src/weather_cmd/: __init__.py  __main__.py  app.py  app.tcss  models.py
src/weather_cmd/api/: geocode.py  noaa.py  openmeteo.py  rainviewer.py
src/weather_cmd/utils/: formatting.py  weather_codes.py
src/weather_cmd/widgets/: alerts.py  daily.py  dashboard.py  graphs.py  radar.py
tests/: test_api_parsing.py  test_formatting.py  test_weather_codes.py
